# twin-query

./: .gitignore  Cargo.toml  Readme.md  gen_data.py  rebuild.sh  rustfmt.toml  test-runner.py  todo.org
data/: bar.csv  bar.schema  foo.csv  foo.schema  gdp.csv  gdp.db  gdp.schema  sample.db
src/: data.rs  exec.rs  grammar.rustpeg  insert.rs  main.rs  plan.rs  query.rs  repl.rs
tests/: sample.txt
