[package]
name = "twin-query"
version = "0.1.0"
authors = ["Alex Angelini <alex.louis.angelini@gmail.com>"]

[dependencies]
bincode = "0.4"
clap = "2.1.2"
clippy = "0.0.63"
crossbeam = "0.2.8"
csv = "0.14"
flate2 = "0.2"
peg = "0.3.10"
petgraph = "0.2"
prettytable-rs = "0.6"
rl-sys = "0.4.1"
rustc-serialize = "0.3"
time = "0.1"
toml = "0.1"
